--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.RecycleActivity"></activity>
-        <activity android:name=".activity.ProgressButtonActivity"></activity>
+        <activity android:name=".activity.RecycleActivity" />
+        <activity android:name=".activity.ProgressButtonActivity" />
+        <activity android:name=".activity.ProgressBarActivity"></activity>
     </application>
 
 </manifest>
